--- a/css/about.css
+++ b/css/about.css
@@ -20,6 +20,10 @@ a {
     background-image: url(../image/blog.jpg);
   }
   
+  .bradcam_bg_5 {
+    background-image: url(../image/theory.jpg);
+  }
+
   @media (min-width: 768px) and (max-width: 991px) {
     /* line 13, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_bradcam.scss */
     .bradcam_area {
