--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,20 @@ a {
 .banner-area {
     background: url(../image/banner.jpg) no-repeat center center/cover;
     overflow: hidden;
+    background-size: 100% 100%;
     /* height: 100%; */
   }
 
   @media (max-width: 767px) {
     .banner-area .fullscreen {
       height: 700px !important;
+      background-size: 150% 100%;
     }
   }
   
   @media (max-width: 767px) {
     .banner-content {
-      margin-top: 100px;
+      margin-top:80px;
     }
   }
   
